Bug 416471 - Activating the liquify tool in a selection leaves some kind of artifact on the selection path
Summary: Activating the liquify tool in a selection leaves some kind of artifact on th...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Transform (other bugs)
Version First Reported In: 4.2.8
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-19 18:41 UTC by shiwaster
Modified: 2020-08-01 08:28 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Krita system information output (2.17 KB, text/plain)
2020-01-19 18:41 UTC, shiwaster
Details

Note You need to log in before you can comment on or make changes to this bug.
Description shiwaster 2020-01-19 18:41:32 UTC
Created attachment 125248 [details]
Krita system information output

SUMMARY

When you make a selection on top of an image with either the elliptical, polygonal, outline or continuous selection tool and afterwards activate the liquify tool you will see some kind of outline/artifact that the selection left in the layer.
This doesn't happen with rectangular selection tool.

Not sure if this should be in the selection or transform component.

STEPS TO REPRODUCE
1. Make selection with the tools mentioned
2. Activate transform tool
3. Activate liquify tool
4. Press enter or switch tool and deselect

OBSERVED RESULT

Selection artifact/outline appears
Video Example https://imgur.com/WVL7JsM
EXPECTED RESULT

Nothing Happens

SOFTWARE/OS VERSIONS
Windows: 10.0.18353 Build 18363
Comment 1 vanyossi 2020-01-19 21:58:10 UTC
Confirming

It appears the border outline on the content is smaller than the selection and makes the pixels alpha inside the selection region. Even if no heave liquify is performed (i.e. just one click outside selection -> apply) the outline leaves an alpha pixel trace of the selection.
Comment 2 feyazabubaker 2020-01-23 22:09:01 UTC
I'm going to see if I can fix this bug.
Comment 3 Halla Rempt 2020-01-24 08:26:06 UTC
Awesome!
Comment 4 feyazabubaker 2020-01-30 16:50:30 UTC
I was able to duplicate with free hand selection tool and all the other transformations. I tried recording it here: https://imgur.com/a/n5Qe4QV
Build version 
ubuntu 18.04, 43.0 pre alpha 8ef0442
Comment 5 Dmitry Kazakov 2020-06-11 18:50:58 UTC
Git commit 5f1ed9adbaea4625ca1d4a377f96e15687f2990f by Dmitry Kazakov.
Committed on 11/06/2020 at 18:50.
Pushed by dkazakov into branch 'krita/4.3'.

Fix Liquify Transform to avoid changing the image when no transform done

M  +6    -0    libs/image/kis_liquify_transform_worker.cpp
M  +2    -0    libs/image/kis_liquify_transform_worker.h
M  +2    -2    plugins/tools/tool_transform2/tool_transform_args.cc

https://invent.kde.org/graphics/krita/commit/5f1ed9adbaea4625ca1d4a377f96e15687f2990f
Comment 6 Dmitry Kazakov 2020-06-11 18:51:16 UTC
Git commit c6fed882eaef18afc8bf747b23b788f799f37b69 by Dmitry Kazakov.
Committed on 11/06/2020 at 18:51.
Pushed by dkazakov into branch 'master'.

Fix Liquify Transform to avoid changing the image when no transform done

M  +6    -0    libs/image/kis_liquify_transform_worker.cpp
M  +2    -0    libs/image/kis_liquify_transform_worker.h
M  +2    -2    plugins/tools/tool_transform2/tool_transform_args.cc

https://invent.kde.org/graphics/krita/commit/c6fed882eaef18afc8bf747b23b788f799f37b69