Fix Liquify Transform to avoid changing the image when no transform done

BUG:416471